# quadruped-reactive-walking

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  ContactSequencer.py  Controller.py  EmergencyStop_controller.py  Estimator.py  FootTrajectoryGenerator.pxd  FootTrajectoryGenerator.py  FootstepPlanner.py  ForceMonitor.py  Interface.py  Joystick.py  LICENSE  Logger.py  MPC.py  MPC_Virtual.py  MPC_Wrapper.py  MpcInterface.py  MpcSolver.py  Planner.py  PyBulletSimulator.py  QP_WBC.py  README.md  Safety_controller.py  TSID_Debug_controller_four_legs_fb_vel.py  bauzil_stairs.urdf  gamepadClient.py  loop.py  main.py  plot_IMU_mocap_result.py  plot_comparison_fb.py  processing.py  robots_loader.py  run_scenarios.py  setup.cfg  setup.py  solo12InvKin.py  test_loop.py  (+3 more)
Documentation/: Equations_MPC_22_02_2020.aux  Equations_MPC_22_02_2020.tex
config/: config_solo12.yaml  walk_parameters.yaml
crocoddyl_class/: MPC_crocoddyl.py  MPC_crocoddyl_planner.py
crocoddyl_eval/: README.md
crocoddyl_eval/test_1/: main.py  run_scenarios.py
crocoddyl_eval/test_2/: unit_test.py
crocoddyl_eval/test_3/: analyse_simu.py
crocoddyl_eval/test_4/: run_scenarios.py
crocoddyl_eval/test_5/: analyse_simu.py  run_scenarios.py
crocoddyl_script/: main.py
include/bindings/: python.hpp
include/example-adder/: MPC.hpp  Planner.hpp  gepadd.hpp
include/mpc-wbc-cpp/: MPC.hpp  gepadd.hpp
include/other/: st_to_cc.hpp
include/qrw/: ComplementaryFilter.hpp  Controller.hpp  Estimator.hpp  FakeRobot.hpp  Filter.hpp  FootTrajectoryGenerator.hpp  FootTrajectoryGeneratorBezier.hpp  FootstepPlanner.hpp  FootstepPlannerQP.hpp  Gait.hpp  Heightmap.hpp  InvKin.hpp  Joystick.hpp  MPC.hpp  MpcWrapper.hpp  Params.hpp  Planner.hpp  QPWBC.hpp  StatePlanner.hpp  StatePlanner3D.hpp  Surface.hpp  Types.h  WbcWrapper.hpp  config.h  mqtt-interface.hpp
include/quadruped-reactive-walking/: InvKin.hpp  MPC.hpp  Planner.hpp  QPWBC.hpp  QP_WPC.hpp
mpc-tsid/: Controller.py  ForceMonitor.py  Joystick.py  LICENSE  Logger.py  Planner.py  PyBulletSimulator.py  QP_WBC.py  README.md  bauzil_stairs.urdf
mpc-tsid/Documentation/: Equations_MPC_22_02_2020.aux  Equations_MPC_22_02_2020.out
mpc-tsid/crocoddyl_class/: MPC_crocoddyl.py  MPC_crocoddyl_planner.py
python/: CMakeLists.txt  Estimator.cpp  Filter.cpp  FootTrajectoryGenerator.cpp  FootstepPlanner.cpp  Gait.cpp  InvKin.cpp  Joystick.cpp  MPC.cpp  MpcWrapper.cpp  Params.cpp  QPWBC.cpp  StatePlanner.cpp  WbcWrapper.cpp  gepadd.cpp  main.cpp  module.cpp
python/Solo3D/: FootTrajectoryGeneratorBezier.cpp  FootstepPlannerQP.cpp  StatePlanner3D.cpp  Surface.cpp
python/example_adder/: __init__.py
python/mpc_wbc_cpp/: __init__.py
python/quadruped_reactive_walking/: ContactDetector.py  Controller.py  Estimator.py  FootTrajectoryGenerator.py  Joystick.py  LoggerControl.py  MPC_Wrapper.py  Planner.py  QP_WBC.py  __init__.py  gamepadClient.py  main_minimal_controler.py  main_solo12_control.py  main_solo12_demo_estimator.py  main_solo12_replay.py  plot_IMU_mocap_result_bis.py  plot_comparison_fb.py  solo12InvKin.py
python/quadruped_reactive_walking/Crocoddyl/: MPC_crocoddyl.py  MPC_crocoddyl_2.py  MPC_crocoddyl_planner.py
python/quadruped_reactive_walking/crocoddyl_class/: MPC_crocoddyl_2.py
python/quadruped_reactive_walking/crocoddyl_eval/test_1/: analyse_simu.py  main.py  run_scenarios.py
python/quadruped_reactive_walking/crocoddyl_eval/test_3/: main.py  run_scenarios.py
python/quadruped_reactive_walking/crocoddyl_eval/test_4/: analyse_simu.py  main.py  run_scenarios.py
python/quadruped_reactive_walking/crocoddyl_eval/test_5/: main.py
python/quadruped_reactive_walking/solo3D/: SurfacePlanner.py  SurfacePlannerWrapper.py  heightmap_generator.py  heightmap_tools.py  pyb_environment_3D.py  utils.py
python/quadruped_reactive_walking/tools/: ForceMonitor.py  LoggerControl.py  LoggerSensors.py  PyBulletSimulator.py  gamepadClient.py  place_com_with_invkin.py  qualisysClient.py  utils_mpc.py
scripts/: Controller.py  Estimator.py  FootTrajectoryGenerator.pxd  ForceMonitor.py  Joystick.py  Logger.py  LoggerControl.py  LoggerSensors.py  MPC_Wrapper.py  Planner.py  PyBulletSimulator.py  QP_WBC.py  README.md  config_solo12.yaml  config_solo12_bis.yaml  heightmap_generator.py  main_mcapi_solo8.py  main_minimal_controler.py  main_solo12_control.py  main_solo12_demo_estimator.py  main_solo12_openloop.py  main_solo12_replay.py  place_com_with_invkin.py  plot_IMU_mocap_result.py  plot_IMU_mocap_result_bis.py  solo12InvKin.py  test_convergence_mpc.py  test_mpc.py  test_new_InvKin.py  test_tasks_InvKin.py  utils_mpc.py
scripts/Crocoddyl/: MPC_crocoddyl.py
scripts/crocoddyl_class/: MPC_crocoddyl.py  MPC_crocoddyl_planner.py
scripts/crocoddyl_eval/: README.md
scripts/joystick-launcher/: README.md  gepetto-quadruped-reactive-walking.service  joystick-launcher.py  joystick-launcher.service
scripts/solo3D/: StatePlanner.py  SurfacePlanner.py  SurfacePlannerWrapper.py  heightmap_generator.py  heightmap_tools.py  (+2 more)
scripts_solopython/: main_solo12_openloop.py  main_solo12_replay.py
src/: ComplementaryFilter.cpp  Controller.cpp  Estimator.cpp  Filter.cpp  FootTrajectoryGenerator.cpp  FootTrajectoryGeneratorBezier.cpp  FootstepPlanner.cpp  FootstepPlannerQP.cpp  Gait.cpp  Heightmap.cpp  InvKin.cpp  Joystick.cpp  MPC.cpp  MpcWrapper.cpp  Params.cpp  Planner.cpp  QPWBC.cpp  QP_WBC.cpp  StatePlanner.cpp  StatePlanner3D.cpp  Surface.cpp  WbcWrapper.cpp  config_solo12.yaml  control_solo12.cpp  gepadd.cpp  main.cpp  mqtt-interface.cpp  st_to_cc.cpp  walk_parameters.yaml
tests/: CMakeLists.txt  add.cpp  boost_add.cpp  boost_estimator.cpp  test_estimator.cpp
tests/python/: CMakeLists.txt  test1.py  testEstimator.py  testFootTrajectoryGenerator.py  testFootsteps.py  testGait.py  testInvKin.py  testMpc.py  test_add.py
tests/python/crocoddyl/: README.md  analyse_control_cycle.py  analyse_control_cycle_2.py  analyse_simu.py  analyse_simu_2.py  compare_mpcs.py  main.py  run_scenarios.py  unittest_augmented.py  unittest_linear.py  unittest_nonlinear.py  unittest_step.py
(+36 files in other folders)
